--- a/myproxylist.yaml
+++ b/myproxylist.yaml
@@ -3,3 +3,6 @@ payload:
   - '+.fitgirl-repack.site'
   - '+.clashofclans.com'
   - '+.supercell.com'
+  - '+.bing.com'
+  - '+.bing.net'
+  - '+.microsoftonline.com'
