--- a/myproxylist.yaml
+++ b/myproxylist.yaml
@@ -4,5 +4,6 @@ payload:
   - '+.clashofclans.com'
   - '+.supercell.com'
   - '+.bing.com'
+  - '+.live.com'
   - '+.bing.net'
   - '+.microsoftonline.com'
