--- a/mydirect.yaml
+++ b/mydirect.yaml
@@ -2,3 +2,7 @@ payload:
   - '+.howimetmrright.com'
   - '+.hz.ali.com'
   - '+.symantec.com'
+  - '+.m.taobao.com'
+  - '+.fourier.taobao.com'
+  - '+.px.ucweb.com'
+  - '+.mmstat.com'
