--- a/proxy.yaml
+++ b/proxy.yaml
@@ -70,6 +70,7 @@ payload:
   - 'chinapower.csis.org'
   - 'cisco.evergage.com'
   - 'ciscolivehls-i.akamaihd.net'
+  - 'client-teamviewer-com.trafficmanager.net'
   - 'clients1.google.com'
   - 'cloudsync-prod.s3.amazonaws.com'
   - 'courier-push-apple.com.akadns.net'
@@ -291,6 +292,7 @@ payload:
   - 'steamvideo-a.akamaihd.net'
   - 't21.nikkei.co.jp'
   - 't21ipau.nikkei.co.jp'
+  - 'teamviewer.com.cdn.cloudflare.net'
   - 'tesla-cdn.thron.com'
   - 'tvcastlive-hamivideo.cdn.hinet.net'
   - 'ubisoft-orbit-savegames.s3.amazonaws.com'
@@ -450,6 +452,7 @@ payload:
   - '+.110xnxx.com'
   - '+.112263.com'
   - '+.114av.xyz'
+  - '+.11jav.com'
   - '+.123-hp.com'
   - '+.123hplaserjet.com'
   - '+.123rf.com'
@@ -519,6 +522,7 @@ payload:
   - '+.1998cdp.org'
   - '+.1bao.org'
   - '+.1bigclub.com'
+  - '+.1bokeponline.top'
   - '+.1classtube.com'
   - '+.1drv.com'
   - '+.1dumb.com'
@@ -593,6 +597,7 @@ payload:
   - '+.315lz.com'
   - '+.32bm.cc'
   - '+.32red.com'
+  - '+.35s4.com'
   - '+.365buymy.com'
   - '+.36rain.com'
   - '+.3789av.com'
@@ -721,6 +726,7 @@ payload:
   - '+.67id.com'
   - '+.67maoab.com'
   - '+.69-sexgames.com'
+  - '+.69bag.xyz'
   - '+.69femdom.com'
   - '+.69flv.com'
   - '+.69gayporno.com'
@@ -806,6 +812,8 @@ payload:
   - '+.922tp.com'
   - '+.928.plus'
   - '+.92ccav.com'
+  - '+.941tube.com'
+  - '+.9550.fun'
   - '+.97dounai.top'
   - '+.991.com'
   - '+.99btgc01.com'
@@ -1008,6 +1016,7 @@ payload:
   - '+.ads-twitter.com'
   - '+.adsense.com'
   - '+.adult'
+  - '+.adult-h.com'
   - '+.adult-home-videos.com'
   - '+.adult-list.com'
   - '+.adult-sex-games.com'
@@ -1159,6 +1168,7 @@ payload:
   - '+.airwick.com'
   - '+.airwick.net'
   - '+.airwickarabia.com'
+  - '+.aisejushi.com'
   - '+.aisex.com'
   - '+.aishegw.com'
   - '+.aiv-cdn.net'
@@ -1462,7 +1472,6 @@ payload:
   - '+.amsterdamluxescort.com'
   - '+.amtb-taipei.org'
   - '+.amytele.com'
-  - '+.amz123.com'
   - '+.amzn.com'
   - '+.amznl.com'
   - '+.anacams.com'
@@ -1561,6 +1570,7 @@ payload:
   - '+.antiwave.net'
   - '+.anudetube.com'
   - '+.anybunny.org'
+  - '+.anydesk.com'
   - '+.anyhentai.com'
   - '+.anyporn.com'
   - '+.anypornhd.com'
@@ -2197,6 +2207,7 @@ payload:
   - '+.backdoorlesbians.com'
   - '+.backroomcastingcouch.com'
   - '+.backtotiananmen.com'
+  - '+.bacon.com'
   - '+.badaas.com'
   - '+.badasianpussy.com'
   - '+.badgen.net'
@@ -2345,6 +2356,7 @@ payload:
   - '+.bcove.video'
   - '+.bcrncdn.com'
   - '+.bcvp0rtal.com'
+  - '+.bcy01.com'
   - '+.bd'
   - '+.bdawnvr.xyz'
   - '+.bdn.dev'
@@ -2656,6 +2668,7 @@ payload:
   - '+.bellsouth.net'
   - '+.bemywife.cc'
   - '+.benaughty.fun'
+  - '+.bengalisexvideos.com'
   - '+.benliton.com'
   - '+.bentley'
   - '+.beric.me'
@@ -2707,6 +2720,7 @@ payload:
   - '+.bestialitysextaboo.com'
   - '+.bestiphonestuff.com'
   - '+.bestjapanesepornsites.com'
+  - '+.bestjavporn.net'
   - '+.bestkinky.com'
   - '+.bestlistofporn.com'
   - '+.bestmallawards.com'
@@ -2870,6 +2884,7 @@ payload:
   - '+.biorxiv.org'
   - '+.bioware.com'
   - '+.biowarestore.com'
+  - '+.biqle.org'
   - '+.bisq.network'
   - '+.bit-z.com'
   - '+.bitballoon.com'
@@ -3031,6 +3046,7 @@ payload:
   - '+.bluemix.net'
   - '+.bluestacks.com'
   - '+.bluffyporn.com'
+  - '+.blurams.com'
   - '+.blz-contentstack.com'
   - '+.bm'
   - '+.bmfinn.com'
@@ -4633,6 +4649,7 @@ payload:
   - '+.dafoh.org'
   - '+.daftporn.com'
   - '+.daftsex-hd.com'
+  - '+.daftsex.com'
   - '+.dagfs.com'
   - '+.dailidaili.com'
   - '+.dailybasis.com'
@@ -4696,6 +4713,7 @@ payload:
   - '+.darwinsource.org'
   - '+.darwinsourcecode.com'
   - '+.dashwood360.com'
+  - '+.dastanhisexy.cc'
   - '+.dastrassi.org'
   - '+.dat.foundation'
   - '+.data-vocabulary.org'
@@ -5391,6 +5409,7 @@ payload:
   - '+.dwnews.com'
   - '+.dwnews.net'
   - '+.dx9527.cc'
+  - '+.dxyav.co'
   - '+.dykycl.com'
   - '+.dynacw.com'
   - '+.dynafleetonline.com'
@@ -6908,6 +6927,7 @@ payload:
   - '+.free-3d-porn.com'
   - '+.free-aa.com'
   - '+.free-abbywinters.com'
+  - '+.free-erobooks.com'
   - '+.free-gate.org'
   - '+.free-hada-now.org'
   - '+.free-sns.com'
@@ -6916,6 +6936,7 @@ payload:
   - '+.free-strip-games.com'
   - '+.free-wap-tube.com'
   - '+.free-xxx-porn.org'
+  - '+.free00.com'
   - '+.free18.net'
   - '+.free3dadultgames.com'
   - '+.free64all.com'
@@ -7074,6 +7095,7 @@ payload:
   - '+.ftvgirls.com'
   - '+.ftvmilfs.com'
   - '+.ftx.com'
+  - '+.fu62.vip'
   - '+.fucd.com'
   - '+.fuchsia.dev'
   - '+.fuck-xxx-movies.com'
@@ -7134,6 +7156,7 @@ payload:
   - '+.furinkan.com'
   - '+.furl.net'
   - '+.furrypornvideos.com'
+  - '+.furuke.com'
   - '+.fury.blog'
   - '+.fury.co'
   - '+.fury.dev'
@@ -7542,6 +7565,8 @@ payload:
   - '+.gnews.org'
   - '+.gnom-cham.com'
   - '+.gnu.org'
+  - '+.gnzi.xyz'
+  - '+.gnzi1.top'
   - '+.go-disneyworldgo.com'
   - '+.go-gaytube.com'
   - '+.go-lang.com'
@@ -7606,6 +7631,7 @@ payload:
   - '+.gongyichuangyi.net'
   - '+.gonike.com'
   - '+.gonzo-movies.com'
+  - '+.gonzo.com'
   - '+.goo'
   - '+.good-gay.com'
   - '+.gooday.xyz'
@@ -8184,6 +8210,7 @@ payload:
   - '+.hetzner.cloud'
   - '+.hetzner.com'
   - '+.heungkongdiscuss.com'
+  - '+.hexatronik.com'
   - '+.hexieshe.com'
   - '+.hexieshe.xyz'
   - '+.hexxeh.net'
@@ -8456,6 +8483,7 @@ payload:
   - '+.hotshame.com'
   - '+.hotspotshield.com'
   - '+.hotstar-cdn.net'
+  - '+.hotstar-labs.com'
   - '+.hotstar.com'
   - '+.hotstarext.com'
   - '+.hotstunners.com'
@@ -8672,6 +8700,7 @@ payload:
   - '+.huhaitai.com'
   - '+.huhamhire.com'
   - '+.huhangfei.com'
+  - '+.huj-pizda.com'
   - '+.hulkshare.com'
   - '+.huloo.cc'
   - '+.hulu.com'
@@ -8915,6 +8944,7 @@ payload:
   - '+.iicns.com'
   - '+.iijav.com'
   - '+.iinet'
+  - '+.iirmll.com'
   - '+.ijavhd.com'
   - '+.ikano'
   - '+.ikea.com'
@@ -9060,6 +9090,7 @@ payload:
   - '+.ingka.com'
   - '+.ingka.dev'
   - '+.ingkacentres.com'
+  - '+.ingyenszexvideo.top'
   - '+.inhumanity.com'
   - '+.inikesneakers.com'
   - '+.init-p01md-lb.push-apple.com.akadns.net'
@@ -9307,6 +9338,7 @@ payload:
   - '+.iqqtv.net'
   - '+.ir'
   - '+.iranianboobs.com'
+  - '+.iransextv.com'
   - '+.iranx.net'
   - '+.iredmail.org'
   - '+.irish'
@@ -9343,6 +9375,7 @@ payload:
   - '+.ismprofessional.net'
   - '+.isohunt.com'
   - '+.israbox.com'
+  - '+.iss138.com'
   - '+.issitedownrightnow.com'
   - '+.issquaredown.com'
   - '+.issquareup.com'
@@ -9417,6 +9450,7 @@ payload:
   - '+.iwc'
   - '+.iwork.com'
   - '+.iwork.wang'
+  - '+.iwyn138.com'
   - '+.ixquick.com'
   - '+.ixxx.com'
   - '+.iyalc.com'
@@ -9488,6 +9522,7 @@ payload:
   - '+.javbabe.net'
   - '+.javbangers.com'
   - '+.javbobo.com'
+  - '+.javbooks.com'
   - '+.javbraze.com'
   - '+.javbus.com'
   - '+.javbus22.com'
@@ -9500,6 +9535,7 @@ payload:
   - '+.javcup.com'
   - '+.javdb.com'
   - '+.javdisk.com'
+  - '+.javdock.com'
   - '+.javdoe.com'
   - '+.javdove.com'
   - '+.javdove8.xyz'
@@ -9535,6 +9571,7 @@ payload:
   - '+.javhub.me'
   - '+.javhub.net'
   - '+.javhuge.com'
+  - '+.javidol.org'
   - '+.javjack.com'
   - '+.javjunkies.com'
   - '+.javkiki.com'
@@ -10252,6 +10289,7 @@ payload:
   - '+.linguee.com'
   - '+.lingvodics.com'
   - '+.link-o-rama.com'
+  - '+.link.com'
   - '+.link2galleries.com'
   - '+.link69.com'
   - '+.linkedin.com'
@@ -10431,6 +10469,7 @@ payload:
   - '+.lss55.com'
   - '+.lsxszzg.com'
   - '+.lt'
+  - '+.ltube.life'
   - '+.lu'
   - '+.lua.org'
   - '+.lubetube.com'
@@ -10479,9 +10518,6 @@ payload:
   - '+.ma.hao123.com'
   - '+.ma1lib.org'
   - '+.maa.plus'
-  - '+.maa1809.com'
-  - '+.maa1815.com'
-  - '+.maa1818.com'
   - '+.mac-mini.com'
   - '+.mac.com'
   - '+.mac.wang'
@@ -11154,6 +11190,7 @@ payload:
   - '+.mlzs.work'
   - '+.mm'
   - '+.mm-cg.com'
+  - '+.mm9841.cc'
   - '+.mm9c63ae.xyz'
   - '+.mma'
   - '+.mmaaxx.com'
@@ -11229,6 +11266,7 @@ payload:
   - '+.momsyoungboys.net'
   - '+.momtarts3d.com'
   - '+.momtube.club'
+  - '+.monaitv.me'
   - '+.monash'
   - '+.monbeats2013.com'
   - '+.mondex.org'
@@ -11404,6 +11442,7 @@ payload:
   - '+.msdn.com'
   - '+.msecnd.net'
   - '+.msedge.net'
+  - '+.msflj.vip'
   - '+.msft.info'
   - '+.msft.net'
   - '+.msftauth.net'
@@ -11443,6 +11482,7 @@ payload:
   - '+.mucinex.com'
   - '+.mucinex.net'
   - '+.mucinexprofessional.com'
+  - '+.mudfish.net'
   - '+.muji.com'
   - '+.muji.net'
   - '+.mujikorea.net'
@@ -11953,6 +11993,7 @@ payload:
   - '+.ng'
   - '+.ngensis.com'
   - '+.ngeo.com'
+  - '+.ngfiles.com'
   - '+.nginx.com'
   - '+.nginx.org'
   - '+.ngodupdongchung.com'
@@ -12168,6 +12209,7 @@ payload:
   - '+.nokiantyres.com'
   - '+.nokogiri.org'
   - '+.nokola.com'
+  - '+.nomachine.com'
   - '+.nomulus.foo'
   - '+.nonktube.com'
   - '+.nonstopfap.com'
@@ -12239,6 +12281,7 @@ payload:
   - '+.ntt'
   - '+.nu'
   - '+.nu-bay.com'
+  - '+.nu36.vip'
   - '+.nubilefilms.com'
   - '+.nubiles-casting.com'
   - '+.nubiles-porn.com'
@@ -12315,6 +12358,7 @@ payload:
   - '+.nvquan.org'
   - '+.nvtongzhisheng.org'
   - '+.nwtca.org'
+  - '+.nwxs8.com'
   - '+.nxta.org'
   - '+.ny.stgloballink.com'
   - '+.nyaa.net'
@@ -12654,6 +12698,7 @@ payload:
   - '+.ourhobby.com'
   - '+.ouroath.com'
   - '+.oursexgames.com'
+  - '+.ourshdtv.com'
   - '+.ourshemales.com'
   - '+.oursogo.com'
   - '+.oursweb.net'
@@ -13046,6 +13091,7 @@ payload:
   - '+.philly.com'
   - '+.phimsex47.club'
   - '+.phimsexhentai.me'
+  - '+.phimsexkhongche.cyou'
   - '+.phimsexnhanh.club'
   - '+.phmsociety.org'
   - '+.phncdn.com'
@@ -13215,6 +13261,7 @@ payload:
   - '+.podcast.co'
   - '+.podictionary.com'
   - '+.poe.com'
+  - '+.poecdn.net'
   - '+.pogo.com'
   - '+.pogobeta.com'
   - '+.pohl'
@@ -13304,6 +13351,7 @@ payload:
   - '+.pornadoo.com'
   - '+.pornaf.com'
   - '+.pornaffected.com'
+  - '+.pornandxxxvideos.com'
   - '+.pornaroma.com'
   - '+.pornav.co'
   - '+.pornaxo.com'
@@ -13746,6 +13794,7 @@ payload:
   - '+.pttgame.com'
   - '+.pttvan.org'
   - '+.ptzwx.com'
+  - '+.pu82.vip'
   - '+.public-sex-porn.com'
   - '+.public-trust.com'
   - '+.publicagentxxx.com'
@@ -14006,6 +14055,7 @@ payload:
   - '+.rdio.com'
   - '+.rdtcdn.com'
   - '+.re'
+  - '+.re25.vip'
   - '+.rea-asia.com'
   - '+.rea-group.com'
   - '+.rea.design'
@@ -14118,6 +14168,7 @@ payload:
   - '+.redxxx.cc'
   - '+.redxxxvideos.com'
   - '+.redzonechannel.com'
+  - '+.ree007.xyz'
   - '+.reflectivecode.com'
   - '+.reform-apple.com'
   - '+.regex101.com'
@@ -14252,6 +14303,7 @@ payload:
   - '+.rplay.live'
   - '+.rpmfusion.org'
   - '+.rprimelab.com'
+  - '+.rrs1.xyz'
   - '+.rrtis.com'
   - '+.rs'
   - '+.rsc.org'
@@ -14298,6 +14350,7 @@ payload:
   - '+.rushporn.online'
   - '+.russianrape.org'
   - '+.rust-lang.org'
+  - '+.rustdesk.com'
   - '+.rusvpn.com'
   - '+.rutracker.net'
   - '+.ruvideos.net'
@@ -14384,6 +14437,7 @@ payload:
   - '+.sanofi'
   - '+.sanspo.com'
   - '+.sanvaras.com'
+  - '+.sanwapub.com'
   - '+.sap'
   - '+.sapikachu.net'
   - '+.sapo'
@@ -14498,6 +14552,7 @@ payload:
   - '+.screw-my-wife.com'
   - '+.scribd.com'
   - '+.scriptspot.com'
+  - '+.scrolller.com'
   - '+.sd'
   - '+.sdcountybmw.com'
   - '+.se'
@@ -14658,6 +14713,7 @@ payload:
   - '+.sexhub.red'
   - '+.sexhubhd.com'
   - '+.sexidude.com'
+  - '+.sexifilm.top'
   - '+.sexiframe.com'
   - '+.sexindians.cc'
   - '+.sexinsex.net'
@@ -14676,6 +14732,8 @@ payload:
   - '+.sexnaweb.net'
   - '+.sexnudo.com'
   - '+.sexo123.net'
+  - '+.sexodama.com'
+  - '+.sexodeamor.com'
   - '+.sexopornolive.com'
   - '+.sexoquente.blog'
   - '+.sexplustube.net'
@@ -15190,6 +15248,7 @@ payload:
   - '+.sosreader.com'
   - '+.sostibet.org'
   - '+.soubory.com'
+  - '+.souka.xyz'
   - '+.soul-plus.net'
   - '+.soulcaliburhentai.net'
   - '+.soumo.info'
@@ -15319,6 +15378,7 @@ payload:
   - '+.ssshuqian.xyz'
   - '+.sssins.com'
   - '+.sssjav.com'
+  - '+.sssuo1.xyz'
   - '+.sstatic.net'
   - '+.sstm.moe'
   - '+.sstmlt.moe'
@@ -15370,6 +15430,7 @@ payload:
   - '+.starott.com'
   - '+.starp2p.com'
   - '+.starplus.com'
+  - '+.starsze.icu'
   - '+.startpage.com'
   - '+.startpath.com'
   - '+.startupjournal.com'
@@ -15489,6 +15550,7 @@ payload:
   - '+.strikinglycdn.com'
   - '+.stripcamfun.com'
   - '+.stripchat.com'
+  - '+.stripe-terminal-local-reader.net'
   - '+.stripe.com'
   - '+.stripe.network'
   - '+.stripecdn.com'
@@ -15670,6 +15732,7 @@ payload:
   - '+.sz'
   - '+.szbbs.net'
   - '+.szcheapmonsterheadphones.com'
+  - '+.szexvideo.top'
   - '+.szwinnertechnology.com'
   - '+.t-g.com'
   - '+.t.co'
@@ -15694,6 +15757,7 @@ payload:
   - '+.taipeisociety.org'
   - '+.taipeitimes.com'
   - '+.taiwan-sex.com'
+  - '+.taiwanadultexpo.com'
   - '+.taiwanbible.com'
   - '+.taiwancon.com'
   - '+.taiwandaily.net'
@@ -15786,6 +15850,7 @@ payload:
   - '+.teamamericany.com'
   - '+.teamneedforspeed.com'
   - '+.teamskeet.com'
+  - '+.teamviewer.com'
   - '+.tearapeak.com'
   - '+.teatroporno.com'
   - '+.tech2.in.com'
@@ -16724,6 +16789,7 @@ payload:
   - '+.underlords.com'
   - '+.underwoodammo.com'
   - '+.unfiltered.news'
+  - '+.ungrounded.net'
   - '+.unholyknight.com'
   - '+.uni.cc'
   - '+.unicorn'
@@ -17368,6 +17434,7 @@ payload:
   - '+.waikeung.org'
   - '+.wailaike.net'
   - '+.wainao.me'
+  - '+.waittingfor001.weebly.com'
   - '+.waiwaier.com'
   - '+.wal-mart.com'
   - '+.wal.co'
@@ -18260,6 +18327,7 @@ payload:
   - '+.xtube.com'
   - '+.xtubebdsm.com'
   - '+.xtubezoo.com'
+  - '+.xu97.vip'
   - '+.xuchao.net'
   - '+.xuchao.org'
   - '+.xuite.net'
@@ -18485,6 +18553,7 @@ payload:
   - '+.yeeyi.com'
   - '+.yegle.net'
   - '+.yellowpages'
+  - '+.yeonda.com'
   - '+.yepporn.com'
   - '+.yes-news.com'
   - '+.yesasia.com'
@@ -18521,6 +18590,7 @@ payload:
   - '+.yizhihongxing.com'
   - '+.yjcontentdelivery.com'
   - '+.ymail.com'
+  - '+.ynoproject.net'
   - '+.yo1health.com'
   - '+.yobit.net'
   - '+.yobt.com'
@@ -18629,6 +18699,7 @@ payload:
   - '+.ysage.com'
   - '+.ysaim.com'
   - '+.ysand.com'
+  - '+.ysav184.xyz'
   - '+.ysbad.com'
   - '+.ysbed.com'
   - '+.yshide.com'
@@ -18692,6 +18763,7 @@ payload:
   - '+.yx51.net'
   - '+.yyii.org'
   - '+.yyjlymb.xyz'
+  - '+.yzld188.top'
   - '+.yzzk.com'
   - '+.z-lib.org'
   - '+.z00.world'
@@ -18777,6 +18849,7 @@ payload:
   - '+.zhuatieba.com'
   - '+.zhuichaguoji.org'
   - '+.zi.media'
+  - '+.zibacity.com'
   - '+.ziddu.com'
   - '+.zillionk.com'
   - '+.zind.cloud'
